fixed horizontal overflow 😎

--- a/src/styles/Forms.module.css
+++ b/src/styles/Forms.module.css
@@ -40,7 +40,7 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  width: 100vw;
+  width: 100%;
 }
 
 .forms-row {
